Development
    Add cancel button to folder load progress bar, clicking cancel clears the playlist
        and cancels the load
    Change -af to -af-add when adding in the export audio filter
    Switch to shared dbus connection, rather that private for faster startup
    Fix some problems with streaming media
    Prevent Drag n Drop reordering in playlist view
    Fix image rescale issue, when mplayer display sizes are different than info values
    Prevent PostProcessing filters from activating with vdpau or xvmc vo's
    Fix popout to fullscreen mode when embedded to work under KWin
    Make ESC take you out of fullscreen mode, but quit when in normal player mode
    Fix rounding error in seconds calculation, when displaying
    Add new commandline options --large_buttons and --always_hide_after_timeout
        --large_buttons - show interface with icons 2.5x biffer, useful for touchscreens
        --always_hide_after_timeout - control bar will slide away even when
                    not in fullscreen mode, useful for small screens
    Some window resize optimizations
	Rework how the audio meter data is read from mplayer
	Fix a couple of setting bugs and initialization bugs
    Fix status icon double click code
    Add some safety checkes
    Fix single instance flicker
    Add new aspect option "Follow Window" allows viewer to tweak the aspect of the video
    Workaround for opening files on smb shares
    Apply seek on pause patch from Bug # 171
    Make a local copy of the data coming from the audio filter so it can't change while processing
    Add colorization to tracker for progress
    Add option to adjust tracker thumb visibility and position
    Fix file open error when last_dir is not set
    Changed subtitle setup so that when Use Embedded Fonts is chosen, the
        Options to select a font, outline and shadow is disabled
    Fix gm_pref_store_get_*_with_defaults to work correctly with gconf