@@ -1,4 +1,5 @@
 Development
+    Fix window resize issue when details are shown and second video is loaded
     Add cancel button to folder load progress bar, clicking cancel clears the playlist
         and cancels the load
     Change -af to -af-add when adding in the export audio filter
